--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,10 @@
     "default_title": "GOJO - გოჯო სატორი",
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/faicon16.png",
-      "32": "icons/favicon32.png"
+      "16": "icons/favicon16.png",
+    "32": "icons/favicon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
     }
   },
   "icons": {
